# mafin_bot

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  babel.cfg  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql
locale/ru_RU/LC_MESSAGES/: messages.po
migrations/models/: 0_20221021173239_init.py  0_20221024182048_init.py  0_20221026170112_init.py  0_20221028222901_init.py  0_20230408070625_init.py  1_20221021220633_update.py  1_20221024184538_update.py  1_20221028230225_add_game_action.py  2_20221022084135_update.py  2_20221029155520_update.py  3_20221030091616_update.py  4_20221030210639_update.py  5_20221111201204_update.py  6_20221113105443_update.py  7_20221113191813_update.py  8_20221113224516_update.py
src/: __main__.py  set_commands.py  templates.py
src/bot/: init.py  phrases.py
src/config/: db.py  env.py
src/db/: models.py
src/handlers/: __init__.py  admin.py  config.py  day.py  doctor.py  end.py  end_game.py  enrollment.py  force_stop.py  join_game.py  keyboards.py  mafia.py  night.py  recruiting.py  services.py  set_in_game.py  start.py  start_bot.py  start_game.py  stop.py  timer.py  timers.py  voting.py
src/rules/: __init__.py  admin.py  command.py  game_state.py  life.py  role.py  state.py
src/services/: __init__.py  abc.py  chat.py  game.py  message.py  player.py
src/services/queries/: add_chat_game.edgeql  add_game_player.edgeql  add_message.edgeql  delete_chat.edgeql  get_all_enrollment_games.edgeql  get_all_players.edgeql  get_game_by_uuid.edgeql  get_games_by_chat_id.edgeql  get_message.edgeql  get_player_by_id.edgeql  update_game_status.edgeql  update_player_role.edgeql
templates/: added_time.j2  alive_players.j2  already_in_game.j2  enrollment.j2  game_over.j2  game_started.j2  join_game.j2  joined_in_game.j2  night_coming.j2  not_enough_players.j2  recruiting.j2  role_notice.j2  start.j2  start_bot.j2  timer.j2  user_already_play.j2
