[tool.poetry]
name = "mafin_bot"
version = "0.1.0"
description = ""
authors = ["VodoGamer"]
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = "^3.10"
telegrinder = "^0.1.dev12"
envparse = "^0.2.0"
loguru = "^0.6.0"
jinja2 = "^3.1.2"
edgedb = "^1.3.0"
babel = "^2.12.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pyright = "^1.1.279"
pre-commit = "^2.20.0"
ruff = "^0.0.260"


[tool.black]
line-length = 99
target-version = ['py310']

[tool.ruff]
select = ["I", "E", "F", "B", "Q"]
exclude = ["venv", "migrations"]

line-length = 99
target-version = "py310"

[tool.isort]
profile = "black"
line_length = 99


[tool.pyright]
include = ["src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
